# dex_arbitrage

./: .env  .gitignore  LICENSE  README.md  hardhat.config.cjs  index.js  package-lock.json  package.json
components/: arbitrageMonitor.js  calculateArbitrage.js  dexPriceFetcher.js  dexPriceFetcherBase.js  dexPriceFetcherV2.js  dexPriceFetcherV3.js  fetchPoolPrices.js  getPoolSlot.js  getQuote.js  initArbEngineCore.js  perf_metrics.json
components/utils/: tokenUtils.js
config/: erc20ABI.js  liquidityPool.js  routerABI.js  routers.js  rpcNetworks.js  tokens.js  uniswapV2PoolABI.js  uniswapV3PoolABI.js
contracts/: ERC20Mock.sol  FlashSwapArbitrage.sol  FlashSwapArbitrageV2.sol  FlashSwapArbitrageV3.sol  FlashloanArbitrage.sol  SwapRouterMock.sol  UniswapPoolMock.sol
perf-viewer/: Cargo.toml
perf-viewer/src/: main.rs  perf_metrics.json
perf_meter/: Cargo.toml
perf_meter/src/: lib.rs
rust/: Cargo.toml
rust/src/: config.rs  context.rs  main.rs
rust/src/threads/: dex_price_fetcher.rs  mod.rs
test/: FlashloanArbitrage.js  FlashloanArbitrageV2Test.cjs  FlashloanArbitrageV3Test.cjs
utils/: log.js
workers/: pair.js
