[package]
name = "rust"
version = "0.1.0"
edition = "2021" # (оставь 2021 — с 2024 ещё бывают проблемы с wasm)

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2", default-features = false, features = ["ws", "rustls"] }
dotenv = "0.15"
rust_decimal = "1.37.1"
anyhow = "1.0.98"

wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
opt-level = "z"
lto = true
